<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fragment_main_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="I'm a TextView"
        />

    <Button
        android:id="@+id/bt_discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_bt_discover"
        />

    <Button
        tools:context=".MainFragment"
        android:id="@+id/bt_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_bt_on"
        />

    <Button
        android:id="@+id/bt_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_bt_off"
        />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >


        <Button
            android:id="@+id/button_fwd"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Forward"
            android:layout_row="1"
            android:layout_column="2"
            />

        <Button
            android:id="@+id/button_reverse"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Reverse"
            android:layout_row="3"
            android:layout_column="2"
            />

        <Button
            android:id="@+id/button_left"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Turn Left"
            android:layout_row="2"
            android:layout_column="1"
            />

        <Button
            android:id="@+id/button_right"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Turn Right"
            android:layout_row="2"
            android:layout_column="3"
            />

    </GridLayout>


</LinearLayout>